--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-masked-view/masked-view": "0.2.6",
-    "@react-native-picker/picker": "github:react-native-picker/picker",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/material-bottom-tabs": "^6.0.9",
@@ -19,10 +18,12 @@
     "expo-camera": "~12.2.0",
     "expo-local-authentication": "^13.2.1",
     "expo-sensors": "~11.3.0",
+    "express": "^4.18.2",
     "jest": "^26.6.3",
     "link": "^1.5.0",
     "native-base": "^3.4.7",
     "node-csv": "^0.1.2",
+    "nodemon": "^2.0.22",
     "react": "17.0.2",
     "react-avatar": "^5.0.1",
     "react-d3-speedometer": "^1.0.2",
@@ -60,6 +61,7 @@
     "@babel/core": "~7.9.0"
   },
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "jest",
     "start": "expo start",
     "android": "expo start --android",
